--- a/crates/ff_egui_app/Cargo.toml
+++ b/crates/ff_egui_app/Cargo.toml
@@ -21,7 +21,7 @@ eframe = { version = "0.29", default-features = false, features = [
 egui_extras = { version = "0.29", default-features = false, features = ["http", "image"] }
 image = { version = "0.25", default-features = false, features = ["png"] }
 log = "0.4"
-fluxfox = { path = "../..", default-features = false, features = ["serde", "archives", "mfi", "wasm", "viz", "fat", "ibmpc", "amiga"] }
+fluxfox = { path = "../..", default-features = false, features = ["rand", "serde", "archives", "mfi", "viz", "fat", "ibmpc", "amiga"] }
 fluxfox_egui = { path = "../ff_egui_lib" }
 
 # We don't need tiny_skia's png support since egui is pulling in image anyway.
@@ -40,6 +40,8 @@ env_logger = "0.11"
 
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+# Add wasm features to fluxfox
+fluxfox = { path = "../..", default-features = false, features = ["wasm"] }
 # Remove AccessKit dependency for web - it is only implemented on Windows.
 eframe = { version = "0.29", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
