--- a/crates/ff_egui_app/Cargo.toml
+++ b/crates/ff_egui_app/Cargo.toml
@@ -32,6 +32,7 @@ rayon = "1.8"
 futures = "0.3"
 bytemuck = { version = "1.7", features = ["derive"] }
 anyhow = { version = "1.0", features = ["std"] }
+strum = "0.26.3"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
