--- a/crates/ff_egui_app/Cargo.toml
+++ b/crates/ff_egui_app/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ff_egui_app"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Daniel Balsom"]
 edition = "2021"
 include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
@@ -11,14 +11,13 @@ all-features = true
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [dependencies]
-egui = "0.29"
-eframe = { version = "0.29", default-features = false, features = [
-    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
+egui = "0.30"
+eframe = { version = "0.30", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
 ]}
-egui_extras = { version = "0.29", default-features = false, features = ["http", "image"] }
+egui_extras = { version = "0.30", default-features = false, features = ["http", "image"] }
 image = { version = "0.25", default-features = false, features = ["png"] }
 log = "0.4"
 fluxfox = { path = "../..", default-features = false, features = ["rand", "serde", "archives", "mfi", "viz", "fat", "ibmpc", "amiga"] }
@@ -36,15 +35,22 @@ strum = "0.26.3"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-egui_extras = { version = "0.29", default-features = false, features = ["file", "image"] }
+egui_extras = { version = "0.30", default-features = false, features = ["file", "image"] }
 env_logger = "0.11"
+# Add Accesskit dependency for native - it is only implemented on Windows.
+eframe = { version = "0.30", default-features = false, features = [
+    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
+    "default_fonts", # Embed the default egui fonts.
+    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
+    "persistence",   # Enable restoring app state when restarting the app.
+]}
 
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 # Add wasm features to fluxfox
 fluxfox = { path = "../..", default-features = false, features = ["wasm"] }
 # Remove AccessKit dependency for web - it is only implemented on Windows.
-eframe = { version = "0.29", default-features = false, features = [
+eframe = { version = "0.30", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
