--- a/crates/ff_egui_lib/Cargo.toml
+++ b/crates/ff_egui_lib/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.4"
 fluxfox = { path = "../..", default-features = false, features = ["fat", "viz"] }
 egui = {  version = "0.30.0", optional = true }
 egui_extras = { version = "0.30.0", optional = true }
+egui_plot = { version = "0.30.0", optional = true }
 serde = { version = "1.0", optional = true }
 strum = { version = "0.26" }
 strum_macros = { version = "0.26" }
@@ -21,7 +22,8 @@ strum_macros = { version = "0.26" }
 image = { version = "0.25", default-features = false, features = ["png"] }
 
 [features]
-default = ["egui", "egui_extras", "serde"]
+default = ["egui", "egui_extras", "egui_plot", "serde"]
 serde = ["dep:serde", "egui/serde"]
 egui = ["dep:egui"]
 egui_extras = ["dep:egui_extras"]
+egui_plot = ["dep:egui_plot"]
