--- a/examples/imgviz/Cargo.toml
+++ b/examples/imgviz/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 
 [dependencies]
 bpaf = { version = "0.9", features = ["autocomplete"] }
-fluxfox = { path = "../.." }
+fluxfox = { path = "../..", features = ["viz", "tiny_skia"] }
 logger = "0.4"
 env_logger = "0.11"
 log = "0.4.22"
