--- a/examples/imgviz/Cargo.toml
+++ b/examples/imgviz/Cargo.toml
@@ -19,7 +19,14 @@ tiny-skia = "0.11"
 crossbeam = "0.8.4"
 anyhow = "1.0"
 rusttype = "0.9"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8.19"
+
+# Optional dependencies
+
+# svg support for saving to SVG format
+svg = { version = "0.18", optional = true }
 
 [features]
-default = ["viz"]
-viz = ["fluxfox/viz"]
+default = ["use_svg"]
+use_svg = ["fluxfox/viz", "dep:svg"]
