--- a/examples/imgviz/Cargo.toml
+++ b/examples/imgviz/Cargo.toml
@@ -22,6 +22,8 @@ rusttype = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8.19"
 
+fluxfox_svg = { path = "../../crates/fluxfox_svg" }
+
 # Optional dependencies
 
 # svg support for saving to SVG format
