--- a/crates/fluxfox_tiny_skia/Cargo.toml
+++ b/crates/fluxfox_tiny_skia/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fluxfox_svg"
+name = "fluxfox_tiny_skia"
 version = "0.2.0"
 edition.workspace = true
 authors.workspace = true
@@ -10,11 +10,12 @@ license.workspace = true
 [dependencies]
 fluxfox = { workspace = true, default-features = false }
 serde = { workspace = true, features = ["derive"], optional = true }
-svg.workspace = true
+tiny-skia = { workspace = true }
 log.workspace = true
 # Web-time is a wasm compatible polyfull for std::time::Instant and Duration. 
 # This is just used for debugging. Perhaps it should be feature-gated
 web-time.workspace = true
+
 
 [features]
 default = ["serde"]
