--- a/crates/fluxfox_cli/Cargo.toml
+++ b/crates/fluxfox_cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "fftool"
+name = "fluxfox_cli"
 description = "An IBM PC floppy disk command line tool powered by fluxfox."
-version = "0.1.0"
+version = "0.2.0"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
