enable saving to SVG from ff_egui_app

--- a/crates/ff_egui_app/Cargo.toml
+++ b/crates/ff_egui_app/Cargo.toml
@@ -86,7 +86,7 @@ features = [
 ]
 
 [features]
-default = ["amiga", "macintosh"]
+default = ["amiga", "macintosh", "svg"]
 amiga = ["fluxfox/amiga"]
 macintosh = ["fluxfox/macintosh"]
 svg = ["dep:fluxfox_svg"]
