--- a/crates/ff_egui_app/Cargo.toml
+++ b/crates/ff_egui_app/Cargo.toml
@@ -23,7 +23,7 @@ image = { version = "0.25", default-features = false, features = ["png"] }
 log = "0.4"
 
 # Fluxfox dependencies
-fluxfox = { path = "../..", default-features = false, features = ["rand", "serde", "archives", "mfi", "viz", "tiny_skia", "fat", "ibmpc", "amiga", "macintosh"] }
+fluxfox = { path = "../..", default-features = false, features = ["core", "serde", "archives", "mfi", "viz", "tiny_skia", "fat", "all_platforms"] }
 # fluxfox_egui provides common egui widgets for fluxfox. This crate is intended for direct use by egui-based emulators.
 fluxfox_egui = { path = "../ff_egui_lib" }
 # fluxfox_tiny_skia provides a tiny_skia rendering backend for fluxfox visualization functions
