--- a/Cargo.toml
+++ b/Cargo.toml
@@ -134,8 +134,8 @@ zip = { version = "2.1", default-features = false, features = ["deflate", "defla
 tar = { version = "0.4", optional = true }
 # Version of time must match time depdendency of zip
 #time = { version = "0.3", features = ["wasm-bindgen"], optional = true }
-wasm-bindgen = { version = "0.2", optional = true }
-wasm-bindgen-futures = { version = "0.4", optional = true }
+wasm-bindgen.workspace = true
+wasm-bindgen-futures.workspace=true
 
 # Workspace dependencies - centralize version control for all crates
 # ----------------------------------------------------------------------------------------------------------------------
@@ -179,6 +179,9 @@ modular-bitfield = "0.11"
 rand = "0.8"
 # web-time is a wasm-compatible replacement for std::time
 web-time = "1.1"
+# wasm-bindgen is used for the web buids of fluxfox_egui
+wasm-bindgen = { version = "=0.2.100" }
+wasm-bindgen-futures = { version = "0.4" }
 
 # Dev dependencies
 # ----------------------------------------------------------------------------------------------------------------------
@@ -194,7 +197,7 @@ default = ["core", "viz", "scripting", "rhai", "archives", "mfi", "fat", "flux",
 # the rand feature enables use of the rand crate for random number generation.
 # note: it is intended to be optional but the fallback is not yet implemented
 rand = ["dep:rand"]
-wasm = ["async", "wasm-bindgen", "wasm-bindgen-futures"]
+wasm = ["async"]
 serde = ["dep:serde", "dep:typetag", "bit-vec/serde_std", "bitflags/serde"]
 tokio-async = ["async", "tokio"]
 async = []
@@ -277,7 +280,7 @@ lto = "thin"
 
 [profile.release.package.ff_egui_app]
 # Fast and small wasm
-opt-level = 2
+opt-level = 's'
 
 # Optimize all dependencies even in debug builds
 [profile.dev.package."*"]
