--- a/crates/ff_egui_app/Trunk.toml
+++ b/crates/ff_egui_app/Trunk.toml
@@ -2,12 +2,14 @@
 release = true
 filehash = false
 no_sri = true
+create_nonce = false
 
 [serve]
 addresses = ["127.0.0.1"]
 open = true
 no_autoreload = false
 headers = { "Cross-Origin-Embedder-Policy" = "require-corp", "Cross-Origin-Opener-Policy" = "same-origin", "Cross-Origin-Resource-Policy" = "same-origin" }
+disable_csp = true
 
 [watch]
 include = ["../../ff_egui_lib/src/**/*.rs"]
