--- a/crates/ff_egui_lib/Cargo.toml
+++ b/crates/ff_egui_lib/Cargo.toml
@@ -16,7 +16,7 @@ fluxfox_tiny_skia = { path = "../fluxfox_tiny_skia" }
 # fluxfox_svg provides SVG rendering for fluxfox visualization functions. Enable via the 'svg' feature.
 fluxfox_svg = { path = "../fluxfox_svg", optional = true }
 
-egui = {  version = "0.30.0", default-features = false, optional = true }
+egui = {  version = "0.30.0", default-features = false }
 egui_extras = { version = "0.30.0", default-features = false, optional = true }
 egui_plot = { version = "0.30.0", optional = true }
 serde = { version = "1.0", optional = true }
@@ -37,6 +37,5 @@ rayon = "1.8"
 default = ["egui", "egui_extras", "egui_plot", "serde"]
 svg = ["dep:fluxfox_svg"]
 serde = ["dep:serde", "egui/serde"]
-egui = ["dep:egui"]
 egui_extras = ["dep:egui_extras"]
 egui_plot = ["dep:egui_plot"]
