--- a/crates/ff_egui_lib/Cargo.toml
+++ b/crates/ff_egui_lib/Cargo.toml
@@ -34,7 +34,7 @@ wasm-bindgen-rayon = "1.3"
 rayon = "1.8"
 
 [features]
-default = ["egui", "egui_extras", "egui_plot", "serde"]
+default = ["egui_extras", "egui_plot", "serde"]
 svg = ["dep:fluxfox_svg"]
 serde = ["dep:serde", "egui/serde"]
 egui_extras = ["dep:egui_extras"]
