--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,9 @@ tests/images/sector_test/sector_test_360k.dmk
 *.psd
 *.jpg
 *.csv
+*.exe
 /plots/*
+/stuff/*
 
 # Ignore scripts, except for published utilies in /scripts
 *.py
