--- a/.github/workflows/deploy_ff_egui_app_cf.yml
+++ b/.github/workflows/deploy_ff_egui_app_cf.yml
@@ -61,7 +61,7 @@ jobs:
         # Note: --public-url is set to /fluxfox/ as a personal GitHub pages site is hosted at /repo-name/
         env:
           URL_PATH: "fluxfox" # URL_PATH should match public-url
-        run: trunk build --release --public-url /fluxfox/
+        run: trunk build --release --public-url /
 
       - name: Optimize WASM with wasm-opt
         working-directory: crates/ff_egui_app
@@ -76,29 +76,11 @@ jobs:
           [ -f dist/index.html ] && echo "Found index.html" || echo "index.html missing"
           [ -f dist/ff_egui_app_bg.wasm ] && echo "Found ff_egui_app_bg.wasm" || echo "ff_egui_app_bg.wasm missing"
 
-      - name: Upload static files as artifact
-        id: deployment
-        uses: actions/upload-pages-artifact@v3
+      - name: Upload to Cloudflare Pages
+        uses: cloudflare/wrangler-action@v3
         with:
-          path: crates/ff_egui_app/dist/
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          command: pages deploy crates/ff_egui_app/dist/ --project-name=fluxfox
 
-  # Deploy job
-  deploy:
-    needs: build
-
-    permissions:
-      pages: write
-      id-token: write
-
-    # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    # Specify runner + deployment step
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
 
